# Spritoglobin-DX

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
spritoglobin_dx/: __init__.py  classes.py  constants.py  graphics.py  gui.py  main.py  popups.py  render.py  scripts.py
spritoglobin_dx/lang/: en_GB.qm  en_GB.ts  en_US.qm  en_US.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  pl_PL.ts  pt_PT.qm  pt_PT.ts
