[project]
name = "spritoglobin_dx"
version = "0.1.0"
description = "Sprite viewer for Bowser's Inside Story DX, and other 3DS M&L games."
authors = [
    {name = "ThePurpleAnon"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyside6 (>=6.10.2,<7.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "opencv-python-headless (>=4.13.0.92,<5.0.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "packaging (>=26.0,<27.0)",
]

[project.urls]
repository = "https://github.com/MnL-Modding/Spritoglobin-DX"

[project.scripts]
spritoglobin-dx = "spritoglobin_dx:main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
nuitka = "^2.6.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
